[package]
name = "tornarec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.34"
iced-x86 = {version = "1.17.0", default-features=false, features = ["encoder",
    "code_asm", "std"]}
fnv = "1.0.7"
memmap2 = "0.5.6"
minifb = "0.23.0"
